# bcd-team-project

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
