[metadata]
name = Bigdata-Capstone-Design-team2
version = 0.0.1
description = Git & Github Workflow Practice for Capstone Project
author = Sorrychoe
license = Beearware
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
url = https://github.com/sorrychoe/bcd-team2
project_urls =
    Source Code = https://github.com/sorrychoe/bcd-team2
    Bug Tracker = https://github.com/sorrychoe/bcd-team2/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.24.0
    pandas>=2.0.0
    matplotlib>=3.5.3

[options.extras_require]
dev =
    flake8>=3.9
    isort>=5.7
    pre-commit>=3.7
    pylint>=3.2
    pytest>=8.1

[flake8]
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9
extend-ignore =
ignore =
per-file-ignores =
    __init__.py:F401,F403,F405
exclude =

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip_gitignore = True
